--- a/index.html
+++ b/index.html
@@ -74,52 +74,52 @@
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-users"></i></div>
                     <h3>Duskanayeva Moxira</h3>
-                    <p><strong>Boshlang'ich sinf ustozlari</strong></p>
+                    <p><strong>Boshlang'ich sinf ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-users"></i></div>
                     <h3>Ibragimova Dilorom</h3>
-                    <p><strong>Boshlang'ich sinf ustozlari</strong></p>
+                    <p><strong>Boshlang'ich sinf ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-users"></i></div>
                     <h3>Karimberdiyeva Muffazal</h3>
-                    <p><strong>Boshlang'ich sinf ustozlari</strong></p>
+                    <p><strong>Boshlang'ich sinf ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-users"></i></div>
                     <h3>Kurambayeva Sanobar</h3>
-                    <p><strong>Boshlang'ich sinf ustozlari</strong></p>
+                    <p><strong>Boshlang'ich sinf ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-users"></i></div>
                     <h3>Rajabboyeva Zamira</h3>
-                    <p><strong>Boshlang'ich sinf ustozlari</strong></p>
+                    <p><strong>Boshlang'ich sinf ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-users"></i></div>
                     <h3>Tosheva Xosiyat</h3>
-                    <p><strong>Boshlang'ich sinf ustozlari</strong></p>
+                    <p><strong>Boshlang'ich sinf ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-users"></i></div>
                     <h3>Shokirova Zarafshon</h3>
-                    <p><strong>Boshlang'ich sinf ustozlari</strong></p>
+                    <p><strong>Boshlang'ich sinf ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-users"></i></div>
                     <h3>Xolboboyeva Gulhayo</h3>
-                    <p><strong>Boshlang'ich sinf ustozlari</strong></p>
+                    <p><strong>Boshlang'ich sinf ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-users"></i></div>
                     <h3>Radjabova Gulnora</h3>
-                    <p><strong>Boshlang'ich sinf ustozlari</strong></p>
+                    <p><strong>Boshlang'ich sinf ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-users"></i></div>
                     <h3>Ubaydullayeva Gulnoza</h3>
-                    <p><strong>Boshlang'ich sinf ustozlari</strong></p>
+                    <p><strong>Boshlang'ich sinf ustoz</strong></p>
                 </div>
             </div>
         </div>
@@ -131,27 +131,27 @@
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-calculator"></i></div>
                     <h3>Adizova Nazora</h3>
-                    <p><strong>Algebra va geometriya ustozlari</strong></p>
+                    <p><strong>Algebra va geometriya ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-calculator"></i></div>
                     <h3>O'rinov Doniyor</h3>
-                    <p><strong>Algebra va geometriya ustozlari</strong></p>
+                    <p><strong>Algebra va geometriya ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-calculator"></i></div>
                     <h3>Valiyev Javlon</h3>
-                    <p><strong>Algebra va geometriya ustozlari</strong></p>
+                    <p><strong>Algebra va geometriya ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-calculator"></i></div>
                     <h3>Saparov Mashhurbek</h3>
-                    <p><strong>Algebra va geometriya ustozlari</strong></p>
+                    <p><strong>Algebra va geometriya ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-calculator"></i></div>
                     <h3>Nasimova Dilnoza</h3>
-                    <p><strong>Algebra va geometriya ustozlari</strong></p>
+                    <p><strong>Algebra va geometriya ustoz</strong></p>
                 </div>
             </div>
         </div>
@@ -187,12 +187,12 @@
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-dna"></i></div>
                     <h3>Kenjayev Shavkat</h3>
-                    <p><strong>Biologiya ustozlari</strong></p>
+                    <p><strong>Biologiya ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-dna"></i></div>
                     <h3>Xoliqova Iroda</h3>
-                    <p><strong>Biologiya ustozlari</strong></p>
+                    <p><strong>Biologiya ustoz</strong></p>
                 </div>
             </div>
         </div>
@@ -204,32 +204,32 @@
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-language"></i></div>
                     <h3>Erkinova Dilnoza</h3>
-                    <p><strong>Ingliz tili ustozlari</strong></p>
+                    <p><strong>Ingliz tili ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-language"></i></div>
                     <h3>Hakimova Gulshod</h3>
-                    <p><strong>Ingliz tili ustozlari</strong></p>
+                    <p><strong>Ingliz tili ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-language"></i></div>
                     <h3>Kalandarova Dinara</h3>
-                    <p><strong>Ingliz tili ustozlari</strong></p>
+                    <p><strong>Ingliz tili ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-language"></i></div>
                     <h3>Solixova Charosxon</h3>
-                    <p><strong>Ingliz tili ustozlari</strong></p>
+                    <p><strong>Ingliz tili ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-language"></i></div>
                     <h3>Talibjanova Hilola</h3>
-                    <p><strong>Ingliz tili ustozlari</strong></p>
+                    <p><strong>Ingliz tili ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-language"></i></div>
                     <h3>Fayzilloyeva Zinnat</h3>
-                    <p><strong>Ingliz tili ustozlari</strong></p>
+                    <p><strong>Ingliz tili ustoz</strong></p>
                 </div>
             </div>
         </div>
@@ -241,17 +241,17 @@
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-language"></i></div>
                     <h3>Almaxanova Kulyash</h3>
-                    <p><strong>Rus tili ustozlari</strong></p>
+                    <p><strong>Rus tili ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-language"></i></div>
                     <h3>Axmadjonova Gulbahor</h3>
-                    <p><strong>Rus tili ustozlari</strong></p>
+                    <p><strong>Rus tili ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-language"></i></div>
                     <h3>Ikramova Mashhura</h3>
-                    <p><strong>Rus tili ustozlari</strong></p>
+                    <p><strong>Rus tili ustoz</strong></p>
                 </div>
             </div>
         </div>
@@ -275,12 +275,12 @@
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-dumbbell"></i></div>
                     <h3>Adashova Ravzaxon</h3>
-                    <p><strong>Jismoniy tarbiya ustozlari</strong></p>
+                    <p><strong>Jismoniy tarbiya ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-dumbbell"></i></div>
                     <h3>Tojiboyev Farxod</h3>
-                    <p><strong>Jismoniy tarbiya ustozlari</strong></p>
+                    <p><strong>Jismoniy tarbiya ustoz</strong></p>
                 </div>
             </div>
         </div>
@@ -292,17 +292,17 @@
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-cogs"></i></div>
                     <h3>Maxammadiyev Samadullo</h3>
-                    <p><strong>Texnologiya ustozlari</strong></p>
+                    <p><strong>Texnologiya ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-cogs"></i></div>
                     <h3>Ochilova Nazira</h3>
-                    <p><strong>Texnologiya ustozlari</strong></p>
+                    <p><strong>Texnologiya ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-cogs"></i></div>
                     <h3>Sultonova Muborak</h3>
-                    <p><strong>Texnologiya ustozlari</strong></p>
+                    <p><strong>Texnologiya ustoz</strong></p>
                 </div>
             </div>
         </div>
@@ -314,12 +314,12 @@
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-laptop-code"></i></div>
                     <h3>Murtazayev Temur</h3>
-                    <p><strong>Informatika ustozlari</strong></p>
+                    <p><strong>Informatika ustoz</strong></p>
                 </div>
                 <div class="teacher-card">
                     <div class="teacher-icon"><i class="fas fa-laptop-code"></i></div>
                     <h3>Yuldashev Sirojiddin</h3>
-                    <p><strong>Informatika ustozlari</strong></p>
+                    <p><strong>Informatika ustoz</strong></p>
                 </div>
             </div>
         </div>
@@ -351,13 +351,13 @@
                 <i class="fas fa-language icon-large"></i>
                 <h3>Ingliz tili kurslari</h3>
                 <p>Hakimov Sardor tomonidan o'tiladi.</p>
-                <a href="https://t.me/YourTelegramUsername1" target="_blank" class="course-button">Kursga yozilish</a>
+                <a href="https://t.me/sardorbek_khakimov" target="_blank" class="course-button">Kursga yozilish</a>
             </div>
             <div class="course-card">
                 <i class="fas fa-calculator icon-large"></i>
                 <h3>Matematika kurslari</h3>
                 <p>Saparov Mashhurbek tomonidan o'tiladi.</p>
-                <a href="https://t.me/YourTelegramUsername2" target="_blank" class="course-button">Kursga yozilish</a>
+                <a href="https://t.me/+998974099061" target="_blank" class="course-button">Kursga yozilish</a>
             </div>
             <div class="course-card">
                 <i class="fas fa-dumbbell icon-large"></i>
@@ -372,10 +372,10 @@
     <section id="gallery" class="fade-in">
         <h2><i class="fas fa-images icon"></i>Foto Galereya</h2>
         <div class="gallery-grid">
-            <img src="image1.jpg" alt="School Event" class="gallery-image">
-            <img src="image2.jpg" alt="Classroom" class="gallery-image">
-            <img src="image3.jpg" alt="Sports Day" class="gallery-image">
-            <img src="image4.jpg" alt="Science Lab" class="gallery-image">
+            <img src="image1.jpg" alt="Rasm1" class="gallery-image">
+            <img src="image2.jpg" alt="Rasm2" class="gallery-image">
+            <img src="image3.jpg" alt="Rasm3" class="gallery-image">
+            <img src="image4.jpg" alt="Rasm4" class="gallery-image">
         </div>
     </section>
     <!-- Newsletter Section -->
@@ -392,9 +392,9 @@
         <div class="footer-content">
             <p>&copy; 2023 173-umumiy o'rta ta'lim maktabi. Barcha huquqlar himoyalangan.</p>
             <div class="social-links">
-                <a href="https://t.me/YourSchoolTelegram" target="_blank"><i class="fab fa-telegram"></i></a>
+                <a href="https://t.me/school173media" target="_blank"><i class="fab fa-telegram"></i></a>
                 <a href="https://www.instagram.com/YourSchoolInstagram" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/YourSchoolFacebook" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.facebook.com/chilonzor173/" target="_blank"><i class="fab fa-facebook"></i></a>
             </div>
         </div>
     </footer>
